<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loading"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/sky_bg"
    tools:context=".LoginActivity">
    <!-- Login progress -->
        <LinearLayout
            android:id="@+id/mssv_login_form"
            android:layout_width="850dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:background="@color/colorLogin">
            <ImageView
                android:id="@+id/login_logo"
                android:layout_width="@dimen/weidth_logo_login"
                android:orientation="vertical"
                android:layout_height="@dimen/height_logo_login"
                android:background="@drawable/logo_login"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/logo"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mssv"
                android:hint="@string/MSSV"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="25dp"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_marginTop="15dp"/>
            <Button
                android:id="@+id/mssv_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:background="@color/colorButonlogin"/>
        </LinearLayout>

    <RelativeLayout
        android:id="@+id/rela_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mssv_login_form"
        android:layout_centerHorizontal="true"
        android:visibility="visible">
        <ProgressBar
            android:id="@+id/progress_bar_load"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical" />
        <TextView
            android:id="@+id/txt_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progress_bar_load"
            android:gravity="center"
            android:text="@string/loading" />
    </RelativeLayout>
</RelativeLayout>